<resources>
    <string name="app_name">Random Fitness</string>
    <string name="this_will_be_the_fitness_app">This will be the fitness app!</string>
    <string name="ws_btn_start">Enter App</string>
    <string name="horizontal_bar">This is a horizontal bar that should have a side menu one day</string>
    <string name="ws_txt_greeting">Hello,</string>
    <string name="greeting_acc">A prompt welcoming the user.</string>
    <string name="ws_txt_username">User</string>
    <string name="sc_txt_todaysDate">Monday, \\n1st Janurary 1900</string>
    <string name="sc_txt_totalSteps">0 steps</string>
    <string name="sc_btn_waterIntake">Water Intake</string>
    <string name="sc_btn_diet">Dieting</string>
    <string name="sc_btn_calorie">Calorie Tracker</string>
    <string name="sc_txt_distance">0.00km</string>
    <string name="ft_txt_Hello">Hello and welcome to Random Fitness. What is your name?</string>
    <string name="ft_txt_enterName">Your name here</string>
    <string name="btn_Begin">Begin</string>

    <string name="initialweight">Please Enter Weight</string>
    <string name="height">Please Enter Height</string>
    <string name="age">Please Enter Age</string>
    <string name="firstname">Please Enter First Name</string>
    <string name="lastname">Please Enter Surname</string>
    <string name="logbutton">Log</string>
    <string name="bmi">BMI:</string>
    <string name="goalweight">Please Enter Goal Weight</string>
    <string name="goalrate">Please Select A Rate of Change</string>
    <string name="weightmaintenance">Weight Maintenance kJ:</string>
    <string name="budget">Daily kJ Budget:</string>
    <string-array name="weightrates">
        <item>Please Select Desired Rate</item>
        <item>Gain 1kg per Week</item>
        <item>Gain 0.5kg per Week</item>
        <item>Maintain Current Weight</item>
        <item>Lose 0.5kg per Week</item>
        <item>Lose 1kg per Week</item>
    </string-array>
    <string name="confirm">Confirm</string>
    <string name="settings">Settings</string>
    <string name="breakfast">0</string>
    <string name="lunch">0</string>
    <string name="dinner">0</string>
    <string name="snacks">0</string>
    <string name="name">Name</string>
    <string name="running_figure">Running figure</string>
    <string name="calendar">Calendar</string>
    <string name="week_overview">Week Overview</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="water_intake">Water Intake</string>
    <string name="calorie_tracker">Calorie Tracker</string>
    <string name="dieting">Dieting</string>
    <string name="greetings">Greetings</string>
    <string name="prev">Prev</string>
    <string name="exit_calendar">Exit Calendar</string>
    <string name="view_all">View All</string>
    <string name="view">View All</string>
    <string name="goal">Goal:</string>
    <string name="daily_intake">Daily Intake:</string>
    <string name="lunch_text">Lunch:</string>
    <string name="snacks_text">Snacks:</string>
    <string name="break_text">Breakfast:</string>

</resources>