<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBEAE5"
    tools:context=".FirstTime">

    <TextView
        android:id="@+id/id_firstTimeMsg"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="52dp"
        android:text="@string/ft_txt_Hello"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/id_yourName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <EditText
        android:id="@+id/id_yourName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:ems="10"
        android:hint="@string/ft_txt_enterName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@android:color/black"

        app:layout_constraintBottom_toTopOf="@+id/id_btn_begin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/id_btn_begin"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:layout_marginBottom="264dp"
        android:backgroundTint="#000000"
        android:onClick="sendMessage"
        android:text="@string/btn_Begin"
        android:textColor="#FFFFFF"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>