<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBEAE5"
    tools:context=".DietSettings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Switch
            android:id="@+id/weightswitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:showText="true"
            android:splitTrack="false"
            android:text="Prefered Weight Units:"
            android:textOff="kg"
            android:textOn="lb"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightswitch" />

        <Switch
            android:id="@+id/energyswitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:showText="true"
            android:splitTrack="false"
            android:text="Prefered Energy Units:"
            android:textOff="kJ"
            android:textOn="Cal"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightswitch" />

        <Button
            android:id="@+id/logbutton"
            android:layout_width="377dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#000000"
            android:text="@string/logbutton"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/energyswitch" />

        <TextView
        android:id="@+id/lastnametextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Surname:"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textlastname"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/firstnametextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="First Name:"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textfirstname"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textfirstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textlastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfirstname" />

    <TextView
        android:id="@+id/goaltextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Goal Weight:"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/goalweighttext"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/agetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Age:"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textinitialage"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textinitialage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinitialweight" />

    <TextView
        android:id="@+id/weighttextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Weight:"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textinitialweight"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/heighttextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Height:"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textheight"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/returnbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#000000"
        android:onClick="goToStepCounter"
        android:text="Return to Main"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logbutton" />

    <EditText
        android:id="@+id/goalweighttext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/goalweight"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmitext" />

    <EditText
        android:id="@+id/textheight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textlastname" />

    <EditText
        android:id="@+id/textinitialweight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/initialweight"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textheight" />

    <TextView
        android:id="@+id/bmitext"
        android:layout_width="408dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/bmi"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinitialage" />

    <TextView
        android:id="@+id/maintenancetext"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/weightmaintenance"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightratespinner" />

    <TextView
        android:id="@+id/budgettext"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/budget"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maintenancetext" />

    <Spinner
        android:id="@+id/weightratespinner"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/weightrates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalweighttext" />

        <Switch
            android:id="@+id/heightswitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:showText="true"
            android:splitTrack="false"
            android:text="Prefered Height Units:"
            android:textOff="cm"
            android:textOn="in"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budgettext" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>