<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBEAE5"
    tools:context=".StepCounter">

    <EditText
        android:id="@+id/id_sc_username"
        android:layout_width="362dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:contentDescription="@string/ws_txt_username"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetingText"
        tools:ignore="EditableContentDescCheck" />

    <EditText
        android:id="@+id/greetingText"
        android:layout_width="136dp"
        android:layout_height="77dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:clickable="false"
        android:contentDescription="@string/greeting_acc"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:importantForAutofill="no"
        android:inputType="none"
        android:marqueeRepeatLimit="marquee_forever"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/ws_txt_greeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#000000"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="EditableContentDescCheck" />

    <TextView
        android:id="@+id/id_todaysDate"
        android:layout_width="231dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:text="@string/sc_txt_todaysDate"
        android:textAlignment="center"
        android:textColor="#4A4A4A"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_sc_username" />

    <TextView
        android:id="@+id/id_stepCounter"
        android:layout_width="219dp"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:text="@string/sc_txt_totalSteps"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_todaysDate" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="117dp"
        android:layout_height="117dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_stepCounter"
        app:srcCompat="@drawable/runningman" />

    <TextView
        android:id="@+id/id_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sc_txt_distance"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_stepCounter" />

    <ImageButton
        android:id="@+id/id_btn_calorieTracker"

        android:layout_width="182dp"
        android:layout_height="91dp"
        android:layout_marginBottom="12dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/id_btn_waterIntake"
        app:layout_constraintEnd_toStartOf="@+id/id_btn_dieting"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/capture2" />

    <ImageButton
        android:id="@+id/id_btn_dieting"
        android:layout_width="182dp"
        android:layout_height="91dp"
        android:layout_marginEnd="16dp"

        android:layout_marginBottom="12dp"
        android:background="@null"
        android:onClick="openDiet"
        app:layout_constraintBottom_toTopOf="@+id/id_btn_bmiCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/dieting2" />

    <ImageButton
        android:id="@+id/id_btn_waterIntake"
        android:layout_width="182dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"

        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/hydration2" />

    <ImageButton
        android:id="@+id/id_btn_bmiCalc"
        android:layout_width="182dp"
        android:layout_height="91dp"
        android:layout_marginBottom="4dp"
        android:background="@null"
        android:onClick="openBMI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/id_btn_waterIntake"
        app:srcCompat="@drawable/bmi" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="381dp"
        android:layout_height="63dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/id_btn_dieting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.794"
        app:srcCompat="@drawable/overview_button" />

</androidx.constraintlayout.widget.ConstraintLayout>